# Mango

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  _config.yml  about.md  blog.md  contact.md  createSolution.py  create_solution.py  fetch_dependencies.py  imgui.ini  index.md  pregenerate_code.py  preprocess.py  structure.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature_addition.md
.github/workflows/: mango_ci.yml
_data/: carousel_img.yml  page_list.yml
_includes/: features.html  footer.html  head.html  header.html  in_progress.html  news.html  roadmap.html
_layouts/: blog-post.html  default.html  wrap-reverse.html  wrap.html
_posts/: 2020-06-09-From-0.md  2020-08-19-GUI.md
_site/: about.html  blog.html  contact.html  index.html
assets/: style.css
doc/: CMakeLists.txt  Doxyfile.in  Mainpage.md  mango_footer.html.in  mango_header.html.in  mango_stylesheet.css.in
editor/: CMakeLists.txt
editor/src/: editor.cpp  editor.hpp
mango/: CMakeLists.txt
mango/include/mango/: application.hpp  assert.hpp  context.hpp  display.hpp  display_event_handler.hpp  imgui_helper.hpp  input.hpp  input_codes.hpp  input_system.hpp  intersect.hpp  log.hpp  mango.hpp  mesh_factory.hpp  packed_freelist.hpp  profile.hpp  render_structures.hpp  render_system.hpp  renderer.hpp  resource_structures.hpp  resources.hpp  scene.hpp  scene_component_manager.hpp  scene_component_pool.hpp  scene_ecs.hpp  scene_ecs.hpp.orig  scene_structures.hpp  scene_types.hpp  slotmap.hpp  system.hpp  types.hpp  ui.hpp  ui_system.hpp  window_system.hpp
mango/src/core/: application.cpp  context_impl.cpp  context_impl.hpp  display_event_handler_impl.hpp  display_impl.hpp  input_impl.cpp  input_impl.hpp  input_system_impl.hpp  linux_input_system.cpp  linux_input_system.hpp  linux_window_system.cpp  linux_window_system.hpp  timer.hpp  win32_input_system.cpp  win32_input_system.hpp  win32_window_system.cpp  win32_window_system.hpp  window_system_impl.hpp
mango/src/core/glfw/: glfw_display.cpp  glfw_display.hpp
mango/src/graphics/: buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  framebuffer.cpp  framebuffer.hpp  gpu_buffer.cpp  gpu_buffer.hpp  graphics.cpp  graphics.hpp  graphics_common.hpp  graphics_device.hpp  graphics_device_context.hpp  graphics_object.hpp  graphics_resources.hpp  graphics_state.cpp  graphics_state.hpp  graphics_types.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  texture.hpp  uniform_buffer.cpp  uniform_buffer.hpp  vertex_array.cpp  vertex_array.hpp
mango/src/graphics/impl/: buffer_impl.cpp  buffer_impl.hpp  framebuffer_impl.cpp  framebuffer_impl.hpp  shader_impl.cpp  shader_impl.hpp  shader_program_impl.cpp  shader_program_impl.hpp  texture_impl.cpp  texture_impl.hpp  vertex_array_impl.cpp  vertex_array_impl.hpp
mango/src/graphics/opengl/: gl_framebuffer_cache.cpp  gl_framebuffer_cache.hpp  gl_graphics_device.cpp  gl_graphics_device.hpp  gl_graphics_device_context.cpp  gl_graphics_device_context.hpp  gl_graphics_resources.cpp  gl_graphics_resources.hpp  gl_graphics_state.hpp  gl_shader_program_cache.cpp  gl_shader_program_cache.hpp  gl_vertex_array_cache.cpp  gl_vertex_array_cache.hpp
mango/src/memory/: allocator.hpp  free_list_allocator.cpp  free_list_allocator.hpp  linear_allocator.cpp  linear_allocator.hpp
mango/src/rendering/: debug_drawer.cpp  debug_drawer.hpp  light_stack.cpp  light_stack.hpp  render_data.hpp  render_data_builder.cpp  render_data_builder.hpp  render_structures.hpp  render_system_impl.cpp  render_system_impl.hpp  renderer_bindings.hpp  renderer_impl.cpp  renderer_impl.hpp  renderer_pipeline_cache.cpp  renderer_pipeline_cache.hpp  ring_buffer_manager.hpp
mango/src/rendering/passes/: auto_luminance_pass.cpp  auto_luminance_pass.hpp  bloom_pass.cpp  bloom_pass.hpp  composing_pass.cpp  composing_pass.hpp  deferred_lighting_pass.cpp  deferred_lighting_pass.hpp  environment_display_pass.cpp  environment_display_pass.hpp  fxaa_pass.cpp  fxaa_pass.hpp  geometry_pass.cpp  geometry_pass.hpp  gtao_pass.cpp  gtao_pass.hpp  hi_z_pass.cpp  hi_z_pass.hpp  render_pass.hpp  shadow_map_pass.cpp  shadow_map_pass.hpp  transparent_pass.cpp  transparent_pass.hpp
mango/src/rendering/pipelines/: deferred_pbr_render_system.cpp  deferred_pbr_render_system.hpp  deferred_pbr_renderer.cpp  deferred_pbr_renderer.hpp
mango/src/rendering/steps/: cubemap_step.cpp  cubemap_step.hpp  environment_display_step.cpp  environment_display_step.hpp  fxaa_step.cpp  fxaa_step.hpp  ibl_step.cpp  ibl_step.hpp  pipeline_step.hpp  render_step.hpp  shadow_map_step.cpp  shadow_map_step.hpp
mango/src/resources/: geometry_objects.cpp  geometry_objects.hpp  image_structures.hpp  mesh_factory.cpp  model_structures.hpp  primitive_builder.cpp  primitive_builder.hpp  resource_structures.hpp  resource_system.cpp  resource_system.hpp  resources_impl.cpp  resources_impl.hpp  shader_structures.hpp  shader_system.cpp  shader_system.hpp  texture_structures.hpp
mango/src/scene/: ecs_common.hpp  ecs_internal.hpp  primitive_manager.cpp  primitive_manager.hpp  scene.cpp  scene_helper.cpp  scene_helper.hpp  scene_impl.cpp  scene_impl.hpp  scene_internals.hpp  scene_structures_internal.hpp
mango/src/ui/: ui_impl.cpp  ui_impl.hpp  ui_system_impl.cpp  ui_system_impl.hpp
mango/src/ui/dear_imgui/: icons_font_awesome_5.hpp  imgui_glfw.cpp  imgui_glfw.hpp  imgui_helper.cpp  imgui_opengl3.cpp  imgui_opengl3.hpp  imgui_widgets.cpp  imgui_widgets.hpp
mango/src/util/: hashing.hpp  helpers.cpp  helpers.hpp  intersect.cpp  intersect.hpp  signal.hpp
scene_old/: scene.hpp  scene_internals.hpp  scene_structures.hpp
test/: CMakeLists.txt  graphics_common_test.cpp  graphics_test.cpp  init_test.cpp  intersect_test.cpp  mock_classes.hpp  packed_freelist_test.cpp  render_system_test.cpp  renderer_test.cpp  slotmap_test.cpp  test_main.cpp  window_system_test.cpp
website/: about.html  blog.html  contact.html  index.html  style.css
(+91 files in other folders)
